--- a/services.html
+++ b/services.html
@@ -21,7 +21,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="assets/images/Logo.png" alt="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -58,145 +58,147 @@
 
                     <div id="srvc-cards" class="card">
                         <img id="srvc-img" src="assets/images/pexels-thisisengineering-3912516.jpg" alt="boxing ring">
-                    </div>
-                    <!-- Button trigger modal -->
-                    <button id="boxing-button" class="srvc-buttons" type="button" class="btn btn-primary" data-bs-toggle="modal"
-                        data-bs-target="#staticBackdrop">
-                        Boxing Facilities
-                    </button>
+                        <h1 id="boxing-button" class="btn btn-primary text-center"> Boxing Facilities</h1>
 
-                    <!-- Modal -->
-                    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
-                        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-xl">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Boxing Facilities</h1>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    ...
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary"
-                                        data-bs-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Understood</button>
-                                </div>
-                            </div>
-                        </div>
+                        <ul id="benefits">
+                            <h2 class="text-center">Benefits</h2>
+                            <li><strong>Realistic Environment</strong>: Boxing rings simulate the actual environment
+                                where boxing,
+                                kickboxing and martial artists matches take place. Training in a ring helps boxers,
+                                kickboxing and martial artists become more comfortable with the space, ropes, and
+                                corners, which can be critical in a real fight.</li><Br>
+
+                            <li><strong>Footwork and Movement</strong>: Boxing, kickboxing and martial artists rings
+                                provide ample space
+                                for footwork and movement. Practicing footwork in the ring helps boxers, kickboxing and
+                                martial artists improve their agility, balance, and overall mobility.</li><br>
+                            <li><strong>Spatial Awareness</strong>: Being inside a ring allows boxers, kickboxing and
+                                martial artists to
+                                develop a better sense of spatial awareness. They learn to gauge distances, angles, and
+                                the position of their opponent, which is crucial in boxing.</li><br>
+
+                            <li><strong>Conditioning and Cardio</strong>: Boxing ring training can be very physically
+                                demanding,
+                                providing an excellent cardiovascular workout. It helps improve endurance, stamina, and
+                                overall fitness.</li><br>
+                            <li><strong>Ring Strategy</strong>: Practicing in a ring allows boxers, kickboxing and
+                                martial artists to
+                                work on ring strategy, which includes understanding ring positioning, cutting off
+                                opponents, and utilising the corners effectively.</li><br>
+                            <li><strong>Mental Toughness</strong>: Training in a ring can help build mental toughness.
+                                It can be
+                                intimidating to face an opponent in a confined space, and ring training can help boxers,
+                                kickboxing and martial artists become more comfortable under pressure.</li><br>
+                            <li><strong>Sparring and Simulation</strong>: Sparring sessions are usually conducted in a
+                                ring, allowing
+                                boxers, kickboxing and martial artists to practice and test their skills in a controlled
+                                environment that closely mimics a real fight.</li><br>
+                        </ul>
                     </div>
                 </div>
                 <div class="row col-12 col-md-6 col-xl-6">
                     <div id="srvc-cards" class="card">
                         <img id="srvc-img" src="assets/images/huum-K65M3GbRYq8-unsplash.jpg" alt="sauna facilities">
-                    </div>
-                    <!-- Button trigger modal -->
-                    <button id="sauna-button" class="srvc-buttons" type="button" class="btn btn-primary" data-bs-toggle="modal"
-                        data-bs-target="#staticBackdrop">
-                        Sauna Facilities
-                    </button>
-
-                    <!-- Modal -->
-                    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
-                        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-xl">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Sauna Facilities</h1>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    ...
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary"
-                                        data-bs-dismiss="modal">Close</button>
-                                    
-                                </div>
-                            </div>
-                        </div>
+                        <h1 id="sauna-button" class="btn btn-primary text-center">Sauna Facilities</h1>
+                        <ul>
+                            <h2 class="text-center">Benefits</h2>
+                            <li><strong>Accelerated Muscle Recovery</strong><br>
+                                Your muscles require a period of recovery after a tough gym session (whether that means
+                                strength training, cardio, or a group class). Sauna sessions help:</li>
+                            <ol><br>
+                                <li>Increase blood circulation, which brings oxygen and nutrients to tired muscles</li>
+                                <li>Flush out metabolic waste like lactic acid</li>
+                                <li>Reduce delayed onset muscle soreness (DOMS), which can occur 24~72 hours
+                                    post-exercise</li>
+                            </ol><Br>
+                            <li><strong>Improved Cardiovascular Health</strong><br>
+                                Regular sauna use has been linked to better heart health. Research from the University
+                                of Eastern Finland tracked over 2,000 middle-aged men for over two decades. Those who
+                                used the sauna 4–7 times per week had a significantly reduced risk of:
+                            </li>
+                            <ol>
+                                <li>Fatal heart disease</li>
+                                <li>Sudden cardiac death</li>
+                                <li>Stroke</li><Br>
+                            </ol>
+                            <li><strong>Mental Clarity and Stress Relief</strong>
+                                Let’s not underestimate the power of a good sweat. Spending just 10–15 minutes in a
+                                sauna can:</li>
+                            <ol>
+                                <li>Lower cortisol levels (the stress hormone)</li>
+                                <li>Promote endorphin release (the “feel-good” hormone)</li>
+                                <li>Create a moment of stillness — away from screens and distractions</li>
+                            </ol><br>
+                            <li><strong>Enhanced Skin Health</strong>
+                                The heat from a sauna opens pores and increases sweat production, which may help:</li>
+                            <ol>
+                                <li>Clear out dirt and dead skin cells</li>
+                                <li>Increase circulation to the skin.</li>
+                                <li>Support collagen production over time.</li>
+                            </ol>
+                        </ul>
                     </div>
                 </div>
                 <div class="row col-12 col-md-6 col-xl-6">
-
                     <div id="srvc-cards" class="card">
                         <img id="srvc-img" src="assets/images/pexels-jacobyavin-12918910.jpg" alt="pool facilities">
-                    </div>
-                    <!-- Button trigger modal -->
-                    <button id="trainer-button" class="srvc-buttons" type="button" class="btn btn-primary" data-bs-toggle="modal"
-                        data-bs-target="#staticBackdrop">
-                        Swimming Pool Facilities
-                    </button>
-
-                    <!-- Modal -->
-                    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
-                        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-xl">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Swimming Pool facilities</h1>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    ...
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary"
-                                        data-bs-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Understood</button>
-                                </div>
-                            </div>
-                        </div>
+                        <h1 id="pool-button" class="btn btn-primary text-center">Swimming Pool Facilities</h1>
+                        <ul>
+                            <h2 class="text-center">Benefits</h2>
+                            <li><strong>Full body workout</strong> Swimming uses all the muscles in the body so whether
+                                you swim a
+                                gentle breaststroke or hammer butterfly, you will get a full body workout. Plus,
+                                exercising in water makes your body work harder so 30 minutes in a pool is worth 45
+                                minutes of the same activity on land.</li><Br>
+                            <li><strong>Great for general wellbeing</strong> Just 30 minutes of swimming three times a
+                                week alongside a
+                                balanced, healthy diet and lifestyle is one of the best ways to stay fit and healthy and
+                                maintain a positive mental outlook. Do it with friends, and it’s even more fun!</li><br>
+                            <li><strong>De-stresses and relaxes</strong>Whether it’s work stressing you out, the kids
+                                being a nightmare, or just life in general, we all get times we just want to SCREAM.
+                                Well, help is at hand. Swimming regularly can lower stress levels, reduce anxiety and
+                                depression, and improve your sleep patterns. Feeling the mental benefits of swimming
+                                takes just a light swim. No lane pounding needed.</li><br>
+                            <li><strong>Burns those calories</strong>Swimming is one of the most effective ways to burn
+                                calories. A gentle swim can burn over 200 calories in just half an hour, more than
+                                double that of walking. And a faster swim would see that chocolate bar gone quicker than
+                                if you went running or cycling.</li><br>
+                            <li><strong>Increases your energy levels</strong>Inactivity and not ageing is often
+                                responsible for people’s lack of energy. Just 30 minutes of swimming three times per
+                                week can boost your energy levels through increased metabolic rate.</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="row col-12 col-md-6 col-xl-6">
 
                     <div id="srvc-cards" class="card">
                         <img id="srvc-img" src="assets/images/pexels-julia-larson-6455791.jpg" alt="staff training">
-                    </div>
-                    <!-- Button trigger modal -->
-                    <button id="pool-button" class="srvc-buttons" type="button" class="btn btn-primary" data-bs-toggle="modal"
-                        data-bs-target="#staticBackdrop">
-                        Staff Training
-                    </button>
-
-                    <!-- Modal -->
-                    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
-                        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-xl">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Staff Training</h1>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    ...
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary"
-                                        data-bs-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Understood</button>
-                                </div>
-                            </div>
-                        </div>
+                        <h1 id="trainer-button" class="btn btn-primary text-center"> Staff Training</h1>
+                        <ul>
+                            <h2 class="text-center">Benefits</h2>
+                            <li><strong>Personalized Training</strong><br>
+                                Gym staff can tailor workout plans to individual needs, goals, and fitness levels. They
+                                consider factors like existing health conditions, medications, and even personal
+                                preferences when designing exercise routines. </li><br>
+                            <li><strong>Proper Form and Technique</strong><br>
+                                Trainers ensure clients are performing exercises correctly, minimizing the risk of
+                                injury and maximizing effectiveness. They provide guidance on weight selection,
+                                repetitions, and proper posture. </li><br>
+                            <li><strong>Increased Knowledge and Confidence</strong><br>
+                                Working with a trainer can increase a client's knowledge of exercise and anatomy,
+                                boosting their confidence in the gym. They can also learn new exercises and techniques
+                                to diversify their workouts. </li><Br>
+                            <li><strong>Injury Prevention</strong><br>By ensuring proper form and technique, trainers
+                                help clients avoid injuries. They can also help with rehabilitation exercises and offer
+                                guidance on safe exercise practices. </li><br>
+                            <li><strong>Motivation and Accountability</strong><Br>Trainers provide encouragement and
+                                support, helping clients stay on track with their fitness goals. They can also serve as
+                                a source of accountability, ensuring clients attend workouts and adhere to their plans.
+                            </li>
+                        </ul>
                     </div>
                 </div>
-
-
         </section>
-
-
-
-
-
-
-
-
-
     </main>
     <footer class="mt-auto">
         <div class="container section">
